--- a/index.html
+++ b/index.html
@@ -1,1 +1,83 @@
-Hello World !!
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+<script src="js/typed.js" type="text/javascript"></script>
+<script>
+  $(function(){
+      $("#typed").typed({
+        strings: [">I am a Software Engineer", ">I am a buddying Data Scientist", ">I am an aspiring Enterper",">I am an aspiring Entrepreneur",">I am Ankit Patil"],
+            // typing speed
+            typeSpeed: 0,
+            // time before typing starts
+            startDelay: 100,
+            // backspacing speed
+            backSpeed: 0,
+            // time before backspacing
+            backDelay: 2000,
+            // loop
+            loop: false,
+            // false = infinite
+            loopCount: false,
+            // show cursor
+            showCursor: true,
+            // character for cursor
+            cursorChar: "_",
+            // attribute to type (null == text)
+            attr: null,
+            // either html or text
+            contentType: 'html',
+            // call when done callback function
+            callback: function() { newTyped(); },
+            // starting callback function before each string
+            preStringTyped: function() {},
+            //callback for every typed string
+            onStringTyped: function() {},
+            // callback for reset
+            resetCallback: function() {}
+      });
+  });
+  
+  function newTyped(){ 
+  
+	$('html, body').animate({
+		scrollTop: $("#scroll_pos").offset().top
+	}, 1000);
+  }
+  
+</script>
+<style>
+.typed-cursor{
+    opacity: 1;
+    -webkit-animation: blink 0.7s infinite;
+    -moz-animation: blink 0.7s infinite;
+    animation: blink 0.7s infinite;
+}
+@keyframes blink{
+    0% { opacity:1; }
+    50% { opacity:0; }
+    100% { opacity:1; }
+}
+@-webkit-keyframes blink{
+    0% { opacity:1; }
+    50% { opacity:0; }
+    100% { opacity:1; }
+}
+@-moz-keyframes blink{
+    0% { opacity:1; }
+    50% { opacity:0; }
+    100% { opacity:1; }
+}
+
+#typing_frame{ 
+    width: 40%;
+    background-color: black;
+    height: 100px;
+	margin-top: 100px;
+	margin-left: auto;
+    margin-right: auto;
+	padding: 5px; color: white; 
+}
+</style>
+
+<div id="typing_frame">
+	<h1><pre><span id="typed"></span></pre></h1>
+</div>
+<center><div id="scroll_pos"></div></center>
