--- a/index.html
+++ b/index.html
@@ -1,9 +1,23 @@
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+<script src="js/jquery-2.1.3.min.js" type="text/javascript"></script>
 <script src="js/typed.js" type="text/javascript"></script>
+<script src="js/jquery.scrollTo.min.js" type="text/javascript"></script>
+<link rel="stylesheet" type="text/css" href="style/custom.css"/>
+
 <script>
+
+	$( document ).ready(function() {
+//		$( "#about_text" ).hide();
+		$( "#resume" ).hide();
+		
+		$('#resume_view').click(function(){
+			$("#resume").show();
+			$('body').scrollTo('#resume')
+		});
+	});
+
   $(function(){
       $("#typed").typed({
-        strings: [">I am a Software Engineer", ">I am a buddying Data Scientist", ">I am an aspiring Enterper",">I am an aspiring Entrepreneur",">I am Ankit Patil"],
+        strings: [">I am a Software Engineer", ">I am a Data Scientist", ">I am an aspiring Enterperneure",">I am an aspiring Entrepreneur",">I am Ankit Patil"],
             // typing speed
             typeSpeed: 0,
             // time before typing starts
@@ -37,47 +51,40 @@
   
   function newTyped(){ 
   
-	$('html, body').animate({
-		scrollTop: $("#scroll_pos").offset().top
-	}, 1000);
+//  $( "#typing_frame" ).slideUp(2000);
+//	setTimeout(
+//		function(){
+//			$( "#typing_frame" ).remove();
+//		},2000);
+// $( "#about_text" ).slideDown(2000);
+// $( "#resume" ).fadeIn(6000);
   }
   
 </script>
-<style>
-.typed-cursor{
-    opacity: 1;
-    -webkit-animation: blink 0.7s infinite;
-    -moz-animation: blink 0.7s infinite;
-    animation: blink 0.7s infinite;
-}
-@keyframes blink{
-    0% { opacity:1; }
-    50% { opacity:0; }
-    100% { opacity:1; }
-}
-@-webkit-keyframes blink{
-    0% { opacity:1; }
-    50% { opacity:0; }
-    100% { opacity:1; }
-}
-@-moz-keyframes blink{
-    0% { opacity:1; }
-    50% { opacity:0; }
-    100% { opacity:1; }
-}
-
-#typing_frame{ 
-    width: 40%;
-    background-color: black;
-    height: 100px;
-	margin-top: 100px;
-	margin-left: auto;
-    margin-right: auto;
-	padding: 5px; color: white; 
-}
-</style>
 
 <div id="typing_frame">
 	<h1><pre><span id="typed"></span></pre></h1>
 </div>
-<center><div id="scroll_pos"></div></center>
+
+
+
+<h2><pre><center><div id="about_text">
+I hold a Masters degree in Computer Science form SUNY Buffalo with Artificial Intelligence as core area.
+Machine Learning and Information Retrieval are my area of expertise and interest. 
+Applying Machine Learning techniques in management of Cloud infrastructure has been my prime interest.
+
+I have two years of experience as a Java Developer at ACI Worldwide Inc. and 
+an internship experience as a Data Scientist at Orchestro Inc.
+
+
+
+Get in touch
+<a href="https://www.linkedin.com/in/patilankit">LinkedIn</a>   <a href="https://github.com/ankitpatil">GitHub</a>   <a href="https://twitter.com/ankitpatil">Twitter</a>   <a href="https://ankitpatil-blogs.blogspot.in">Blog</a>  <a href="https://www.facebook.com/ankit.patil">Facebook</a>
+
+</div>
+<div id="resume_view">
+View Resume
+</div>
+<div id="resume">
+<embed src="https://ankitpatil.github.io/trunk/pdf/AnkitPatilResume.pdf" width="840" height="1070">
+</div></center><pre></h2>
