Changed view resume. Added email link.

--- a/index.html
+++ b/index.html
@@ -6,13 +6,8 @@
 <script>
 
 	$( document ).ready(function() {
-//		$( "#about_text" ).hide();
-		$( "#resume" ).hide();
-		
-		$('#resume_view').click(function(){
-			$("#resume").show();
-			$('body').scrollTo('#resume')
-		});
+		$( "#about_text,#getInTouch,#resume" ).hide();
+
 	});
 
   $(function(){
@@ -56,7 +51,7 @@
 //		function(){
 //			$( "#typing_frame" ).remove();
 //		},2000);
-// $( "#about_text" ).slideDown(2000);
+	$( "#about_text,#getInTouch,#resume	" ).fadeIn(3000);
 // $( "#resume" ).fadeIn(6000);
   }
   
@@ -75,16 +70,12 @@ Applying Machine Learning techniques in management of Cloud infrastructure has b
 
 I have two years of experience as a Java Developer at ACI Worldwide Inc. and 
 an internship experience as a Data Scientist at Orchestro Inc.
+</div>
 
-
-
+<div id="getInTouch">
 Get in touch
-<a href="https://www.linkedin.com/in/patilankit">LinkedIn</a>   <a href="https://github.com/ankitpatil">GitHub</a>   <a href="https://twitter.com/ankitpatil">Twitter</a>   <a href="https://ankitpatil-blogs.blogspot.in">Blog</a>  <a href="https://www.facebook.com/ankit.patil">Facebook</a>
+<a href="https://www.linkedin.com/in/patilankit">LinkedIn</a>   <a href="https://github.com/ankitpatil">GitHub</a>   <a href="https://twitter.com/ankitpatil">Twitter</a>   <a href="https://ankitpatil-blogs.blogspot.in">Blog</a>  <a href="https://www.facebook.com/ankit.patil">Facebook</a>  <a href="mailto:ankitpatil2010@gmail.com">Email</a></div>
 
-</div>
-<div id="resume_view">
-View Resume
-</div>
 <div id="resume">
-<embed src="https://ankitpatil.github.io/trunk/pdf/AnkitPatilResume.pdf" width="840" height="1070">
+<a href="https://github.com/ankitpatil/ankitpatil.github.io/blob/master/pdf/AnkitPatilResume.pdf?raw=true">Resume</a>
 </div></center><pre></h2>
