removed pre tag and made UI compatible across platforms

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <script>
 
 	$( document ).ready(function() {
-		$( "#about_text,#getInTouch,#resume" ).hide();
+		$( "#about_text,#resume,#links" ).hide();
 
 	});
 
@@ -51,7 +51,7 @@
 //		function(){
 //			$( "#typing_frame" ).remove();
 //		},2000);
-	$( "#about_text,#getInTouch,#resume	" ).fadeIn(3000);
+	$( "#about_text,#resume,#links" ).fadeIn(6000);
 // $( "#resume" ).fadeIn(6000);
   }
   
@@ -63,19 +63,27 @@
 
 
 
-<h2><pre><center><div id="about_text">
-I hold a Masters degree in Computer Science form SUNY Buffalo with Artificial Intelligence as core area.
-Machine Learning and Information Retrieval are my area of expertise and interest. 
-Applying Machine Learning techniques in management of Cloud infrastructure has been my prime interest.
-
-I have two years of experience as a Java Developer at ACI Worldwide Inc. and 
+<h3><center><div id="about_text">
+<br>
+I hold a Masters degree in Computer Science form SUNY Buffalo with Artificial Intelligence as core area.<br>
+Machine Learning and Information Retrieval are my area of expertise and interest.<br> 
+Applying Machine Learning techniques in management of Cloud infrastructure has been my prime interest.<br>
+<p>
+I have two years of experience as a Java Developer at ACI Worldwide Inc. and<br> 
 an internship experience as a Data Scientist at Orchestro Inc.
 </div>
 
-<div id="getInTouch">
-Get in touch
-<a href="https://www.linkedin.com/in/patilankit">LinkedIn</a>   <a href="https://github.com/ankitpatil">GitHub</a>   <a href="https://twitter.com/ankitpatil">Twitter</a>   <a href="https://ankitpatil-blogs.blogspot.in">Blog</a>  <a href="https://www.facebook.com/ankit.patil">Facebook</a>  <a href="mailto:ankitpatil2010@gmail.com">Email</a></div>
 
+<div id="links"><br>
+<a href="https://www.linkedin.com/in/patilankit">LinkedIn</a>&nbsp;&nbsp;
+<a href="https://github.com/ankitpatil">GitHub</a>&nbsp;&nbsp;
+<a href="https://twitter.com/ankitpatil">Twitter</a>&nbsp;&nbsp;
+<a href="https://ankitpatil-blogs.blogspot.in">Blog</a>&nbsp;&nbsp;
+<a href="https://www.facebook.com/ankit.patil">Facebook</a>&nbsp;&nbsp;
+<a href="mailto:ankitpatil2010@gmail.com">Email</a>
+<div>
+
+<br><br>
 <div id="resume">
 <a href="https://github.com/ankitpatil/ankitpatil.github.io/blob/master/pdf/AnkitPatilResume.pdf?raw=true">Resume</a>
-</div></center><pre></h2>
+</div></center></h3>
