Changed font style

--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
 
 
 
-<h3><center><div id="about_text">
-<br>
+<center><div id="about_text">
+<br><br>
 I hold a Masters degree in Computer Science form SUNY Buffalo with Artificial Intelligence as core area.<br>
 Machine Learning and Information Retrieval are my area of expertise and interest.<br> 
 Applying Machine Learning techniques in management of Cloud infrastructure has been my prime interest.<br>
@@ -86,4 +86,4 @@ an internship experience as a Data Scientist at Orchestro Inc.
 <br><br>
 <div id="resume">
 <a href="https://github.com/ankitpatil/ankitpatil.github.io/blob/master/pdf/AnkitPatilResume.pdf?raw=true">Resume</a>
-</div></center></h3>
+</div></center>
