--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <script>
 
 	$( document ).ready(function() {
-		$( "#about_text,#resume,#links" ).hide();
+//		$( "#about_text,#resume,#links" ).hide();
 
 	});
 
@@ -51,7 +51,7 @@
 //		function(){
 //			$( "#typing_frame" ).remove();
 //		},2000);
-	$( "#about_text,#resume,#links" ).fadeIn(6000);
+//	$( "#about_text,#resume,#links" ).fadeIn(6000);
 // $( "#resume" ).fadeIn(6000);
   }
   
@@ -67,7 +67,7 @@
 <br><br>
 I hold a Masters degree in Computer Science form SUNY Buffalo with Artificial Intelligence as core area.<br>
 Machine Learning and Information Retrieval are my area of expertise and interest.<br> 
-Applying Machine Learning techniques in management of Cloud infrastructure has been my prime interest.<br>
+<!--Applying Machine Learning techniques in management of Cloud infrastructure has been my prime interest.<br> -->
 <p>
 I have two years of experience as a Java Developer at ACI Worldwide Inc. and<br> 
 an internship experience as a Data Scientist at Orchestro Inc.
